Fixed the GC footer spacing in french and in medium view

--- a/src/sass/views/_mediumView.scss
+++ b/src/sass/views/_mediumView.scss
@@ -7,3 +7,8 @@
 /*
   @title: Medium view (screen only)
  */
+#gc-info {
+	li {
+		margin-left: 0;
+	}
+}
