--- a/src/sass/views/_mediumViewOver.scss
+++ b/src/sass/views/_mediumViewOver.scss
@@ -312,7 +312,7 @@ body {
 	}
 
 	li {
-		margin: 12px 0 13px 48px;
+		margin: 12px 0 13px 40px;
 
 		&:first-child {
 			margin-left: 0;
@@ -400,7 +400,7 @@ body {
 
 	#gc-info {
 		li {
-			margin: 12px 48px 13px 0;
+			margin: 12px 40px 13px 0;
 
 			&:first-child {
 				margin-right: 0;
